@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add non-blocking write (*nix, and windows too!)
+
 0.012     2020-12-13 18:30:33-08:00 America/Los_Angeles
 
     - Fix some tests that were breaking Test2's IPC
